# pointax

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
examples/: envs.py  training.py  video.py
pointax/: __init__.py  env.py  mazes.py  types.py
tests/: test.py
